Clean up en/fr for 5.0 relnotes

--- a/slitaz/index.fr.html
+++ b/slitaz/index.fr.html
@@ -30,7 +30,8 @@
 
 <h2>Documentation (fr)</h2>
 
-<p>
+
+<!--<p>
 	La version en cuisson ou <em>Cooking</em> ne fourni pas de notes de
 	publication, les chagements sont annonçés sur le site web et 
 	<a href="http://scn.slitaz.org/">le blog officiel</a> proposent des
@@ -38,9 +39,9 @@
 	référer à <a href="http://doc.slitaz.org/">la documentation</a> et 
 	trouverez de l'aide sur <a href="http://forum.slitaz.org/">le forum</a>
 	du projet.
-</p>
+</p>-->
 
-<!--<p>
+<p>
 La version stable de SliTaz GNU/linux est distribuée avec les manuels 
 des outils de la distribution et <a href="relnotes.fr.html">les Notes de publication</a>.
 Tous les manuels ainsi que cette page sont directement accessibles depuis
@@ -49,19 +50,20 @@ documentation complète via le site communautaire:
 <a href="http://doc.slitaz.org/">doc.slitaz.org</a>.
 Pour de l'aide vous trouverez un support technique gratuit via la liste
 de discussion ou <a href="http://forum.slitaz.org/">le forum</a>.
-</p>-->
+</p>
 
 <ul>
 	<li><a href="index.en.html#start">Getting started guide</a> (en)</li>
-	<!--<li><a href="relnotes.fr.html">Notes de publication pour 3.0</a></li>-->
-	<li><a href="http://doc.slitaz.org/fr:start">Documentation en ligne</a></li>
+	<li><a href="relnotes.fr.html">Notes de publication pour 3.0</a></li>
+	<li><a href="http://doc.slitaz.org/fr:start">Wiki en ligne</a></li>
 </ul>
 
 <!-- End of content -->
 </div>
 
 <footer>
-	Copyright © <span class="year"></span> <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright © <span class="year"></span> 
+	<a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </footer>
 
 </body>
