--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -30,14 +30,14 @@
 
 <h2>Documentation (en)</h2>
 
-<p>
+<!--<p>
 	The Cooking version doesn't provide any Release Notes, major changes are
 	announced on the web site and the <a href="http://scn.slitaz.org/">Blog</a>
 	provides fresh news about the project's activity. Like the stable version,
 	you can find <a href="http://doc.slitaz.org/">documentation</a> on the
 	wiki site and support on the community
 	<a href="http://forum.slitaz.org/">forum</a>.
-</p>
+</p>-->
 
 <p>
 	The SliTaz GNU/Linux stable release is published with the project tools,
@@ -51,12 +51,12 @@
 
 <ul>
 	<li><a href="#start">Getting started guide</a></li>
-	<li><a href="relnotes.en.html">Release Notes for 4.0</a>
-		<!-- - <a href="relnotes.cn.html">cn</a> |
+	<li><a href="relnotes.en.html">Release Notes for 5.0</a>
+		 - <a href="relnotes.cn.html">cn</a> |
 		<a href="relnotes.en.html">en</a> |
 		<a href="relnotes.es.html">es</a> |
 		<a href="relnotes.fr.html">fr</a> |
-		<a href="relnotes.pt.html">pt</a>-->
+		<a href="relnotes.pt.html">pt</a>
 	</li>
 	<li><a href="http://doc.slitaz.org/en:start">Online Documentation</a></li>
 </ul>
@@ -72,7 +72,7 @@
 	can control your entire system, this includes package management, adding or
 	removing users, creating Live systems and much more. Each page provides
 	a small description to help you manage your SliTaz system. To access the
-	panel you can use the menu entry in “System Tools” or this url:
+	panel you can use the menu entry in "System Tools” or this url:
 </p>
 <p>
 	<a href="http://tazpanel:82">http://tazpanel:82</a>
@@ -122,8 +122,8 @@ can also be done from the command line using <code>tazpkg</code>.
 The SliTaz packages database provides a variety of lightweight office applications.
 All of these packages are easily installable in a few clicks through the packages
 manager in Tazpanel. SliTaz also provides a simple way to install the powerful
-LibreOffice suite: just search for “LibreOffice” in the packages manager, double click
-on “get-LibreOffice”, select the “Auto install non free package” checkbox, and click
+LibreOffice suite: just search for "LibreOffice” in the packages manager, double click
+on "get-LibreOffice”, select the "Auto install non free package” checkbox, and click
 Install.
 </p>
 <p>
@@ -152,11 +152,11 @@ available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>
 <h3 id="info">System information</h3>
 
 <p>
-You can get information on your system by clicking on “System information”
-in the System Tools menu, then “Summary”. Clicking on the other 
+You can get information on your system by clicking on "System information”
+in the System Tools menu, then "Summary”. Clicking on the other 
 buttons offers you more information, and using the benchmarks can
 give you an idea on how fast your computer is. To have a list and control
-of all your current processes, you can use the “Task Manager” available in
+of all your current processes, you can use the "Task Manager” available in
 the same menu.
 </p>
 
@@ -182,16 +182,18 @@ SliTaz won't function in memory (RAM) anymore like in Live or Frugal mode and
 everything is persistent.
 </p>
 <p>
-To generate a LiveUSB system, you can use the “Tazusb LiveUSB Tool” from the “System Tools”
-menu or <code>tazusb</code> from the command line. More information can be found in the SliTaz
-Handbook: <a href="http://doc.slitaz.org/en:handbook:liveusb">LiveUSB media</a>
+To generate a LiveUSB system, you can use the "Tazusb LiveUSB Tool” from 
+the "System Tools” menu or <code>tazusb</code> from the command line. More 
+information can be found in the SliTaz Handbook:
+<a href="http://doc.slitaz.org/en:handbook:liveusb">LiveUSB media</a>
 </p>
 
 <!-- End of content -->
 </div>
 
 <footer>
-	Copyright © <span class="year"></span> <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright © <span class="year"></span> 
+	<a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </footer>
 
 </body>
