--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html lang="en">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="UTF-8">
 	<title>SliTaz - System doc (en)</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="../slitaz-doc.css">
 </head>
 <body>
 
@@ -164,7 +164,7 @@ the same menu.
 <h3 id="root">Becoming Root</h3>
 
 <p>
-By default, Slitaz doesn't have its desktop running as root administrator:
+By default, SliTaz doesn't have its desktop running as root administrator:
 it asks for a root password (default <code>root</code>) for any superuser work.
 Therefore, it is safer and more secure. To become root in an xterm, simply 
 type <code>su</code> and enter the root password.  To run a graphical application
