--- a/slitaz/index.hu.html
+++ b/slitaz/index.hu.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="hu">
+<html lang="hu">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="UTF-8">
 	<title>SliTaz - System doc (hu)</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="../slitaz-doc.css">
 </head>
 <body>
 
@@ -33,13 +33,13 @@
 <p>
 	A SliTaz GNU/Linux stabil kiadása a rendszerre telepített projekt-eszközökkel,
 	leírásokkal és Kiadási tájékoztatóval jelent meg. A leírások és ez az oldal
-	az Openbox menün keresztül érhetők el. A Slitazzal kapcsolatos általános
+	az Openbox menün keresztül érhetők el. A SliTazzal kapcsolatos általános
 	információkért kérjük látogassa meg a
 	<a href="http://www.slitaz.org/">projekt oldalt</a> . A rendszer beállításához
 	és használatához olvassa el a
 	<a href="http://doc.slitaz.org/en:handbook:start">Kézikönyvet</a>. A
 	közösségről a <a href="http://doc.slitaz.org/">SliTaz Doc</a> oldalon talál
-	dokomentumokat. Támogatást a Slitaz közösségi
+	dokomentumokat. Támogatást a SliTaz közösségi
 	<a href="http://forum.slitaz.org/">Fórumon</a> keresztül kaphat.
 </p>
 <p>
