--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="pt_BR">
+<html lang="pt_BR">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="UTF-8">
 	<title>SliTaz - System doc (pt)</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="../slitaz-doc.css">
 </head>
 <body>
 
@@ -75,7 +75,7 @@ de Redes Wireless) que se localiza no Gerenciador de Rede ou indo na
 entrada de menu “Ferramentas do Sistema” → “Gerenciador de Redes Wireless”.
 </p>
 <p>
-Maiores informações podem ser encontradas no Manual Do Slitaz: 
+Maiores informações podem ser encontradas no Manual Do SliTaz:
 <a href="http://doc.slitaz.org/pt:handbook:networkconf"
 	>Configuração de Rede</a>
 </p>
