Refresh slitaz/index.fr.html and slitaz/index.en.html

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -104,7 +104,7 @@ More detailed information can be found in the Handbook:
 
 <p>
 To have a list of all graphical applications, you can use the SliTaz menu button 
-at the bottom left of the screen. To have a list of command line tools, you
+at the top left of the screen. To have a list of command line tools, you
 can open a terminal and double press on the tabulation button.  Tazpanel provides 
 a nice GUI for package management through the 
 <a href="http://tazpanel:82/pkgs.cgi">Packages</a> tab. To retrieve a list of all 
@@ -140,24 +140,13 @@ mixer and a light audio player to easily listen to any MP3 or OGG files. The Sou
 card is autodetected at boot time and audio support works out-of-the-box
 on many systems. If you manually add a new user and can't listen to audio, please
 check that the user belongs to the <code>audio</code> group. For any other trouble, please
-check the full documentation and/or use the forum.
+check the full documentation and/or use the <a href="http://forum.slitaz.org/">forum</a>.
 </p>
 <p>
-Videos can be watched by installing one single package or using a dedicated
+Videos using common HTML5 codecs such as WEBM or MPEG4 can be watched out-of-the-box.
+Other videos can be watched by installing one single package or using a dedicated
 LiveCD or LiveUSB system. The SliTaz team have packaged some of the best video players 
 available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>vlc</code>.
-</p>
-
-
-<h3 id="info">System information</h3>
-
-<p>
-You can get information on your system by clicking on "System information”
-in the System Tools menu, then "Summary”. Clicking on the other 
-buttons offers you more information, and using the benchmarks can
-give you an idea on how fast your computer is. To have a list and control
-of all your current processes, you can use the "Task Manager” available in
-the same menu.
 </p>
 
 
