--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -146,7 +146,10 @@ check the full documentation and/or use the <a href="http://forum.slitaz.org/">f
 Videos using common HTML5 codecs such as WEBM or MPEG4 can be watched out-of-the-box.
 Other videos can be watched by installing one single package or using a dedicated
 LiveCD or LiveUSB system. The SliTaz team have packaged some of the best video players 
-available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>vlc</code>.
+available under GNU/Linux: 
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=mplayer">mplayer</a>,
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=xine-ui">xine-ui</a> and
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=vlc">vlc</a>.
 </p>
 
 
