--- a/slitaz/index.fr.html
+++ b/slitaz/index.fr.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
 <head>
 	<meta charset="utf-8" />
-	<title>SliTaz - System doc (fr)</title>
+	<title>SliTaz - Documentation système (fr)</title>
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="../slitaz-doc.css" />
 </head>
@@ -152,7 +152,9 @@ Les videos utilisant un codec HTML5 habituel comme WEBM ou MPEG4 peuvent être
 vues directement. Les autres peuvent être vues en installant un simple paquet
 ou en utilisant un système LiveCD ou LiveUSB. L'équipe de SliTaz à 
 empaqueté quelques uns des meilleurs lecteurs video disponibles sous GNU/Linux :
-<code>mplayer</code>, <code>xine-ui</code> et <code>vlc</code>.
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=mplayer">mplayer</a>,
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=xine-ui">xine-ui</a> et
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=vlc">vlc</a>.
 </p>
 
 
