--- a/slitaz/index.hu.html
+++ b/slitaz/index.hu.html
@@ -28,7 +28,7 @@
 <!-- Content. -->
 <div id="content">
 
-<h2>Documentation (fr)</h2>
+<h2>Documentation (hu)</h2>
 
 <p>
 	A SliTaz GNU/Linux stabil kiadása a rendszerre telepített projekt-eszközökkel,
