Update slitaz/index.*.html (again)

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -127,8 +127,13 @@ on "get-LibreOffice”, select the "Auto install non free package” checkbox, a
 Install.
 </p>
 <p>
-To have a lightweight office suite: just use Abiword as the Word processor, Gnumeric as a
-Spreadsheet and Homebank for Bank Accounting.
+To have a lightweight office suite: just use
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=abiword">Abiword</a>
+as the Word processor,
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=gnumeric">Gnumeric</a>
+as a preadsheet and
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=homebank">Homebank</a>
+for Bank Accounting.
 </p>
 
 
