--- a/slitaz/index.fr.html
+++ b/slitaz/index.fr.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-	<h1>SliTaz - System doc</h1>
+	<h1>SliTaz - Documentation système</h1>
 </header>
 
 <!-- Languages -->
@@ -130,8 +130,13 @@ dans le gestionnaire de paquet, double-clicker sur "get-LibreOffice", cocher
 la case "Installe automatiquement le paquet", et cliquez sur Installer.
 </p>
 <p>
-Pour avoir une suite bureautique légère : utilisez Abiword comme traitement
-de texte, Gnumeric comme tableur et Homebank pour gérer vos comptes.
+Pour avoir une suite bureautique légère : utilisez 
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=abiword">Abiword</a>
+comme traitement de texte,
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=gnumeric">Gnumeric</a>
+comme tableur et 
+<a href="http://127.0.0.1:82/user/pkgs.cgi?info=homebank">Homebank</a>
+pour gérer vos comptes.
 </p>
 
 
